crates/rlf-macros/tests/fail/match_undeclared_param.rs
use rlf::rlf;

rlf! {
    cards($n) = :match($unknown) { *other: "cards" };
}

fn main() {}
